# pydantic-models

./: .gitignore  pyproject.toml
requirements/: dev-3rd-party.in  dev.in  run-3rd-party.in  test-3rd-party.in
src/resultes_pydantic_models/: common.py  pytrnsys.py  runner.py  server.py  test_common.py  user.py
src/resultes_pydantic_models/simulations/: __init__.py  simulation.py  variation.py
src/resultes_pydantic_models/simulations/parameters/: __init__.py
src/resultes_pydantic_models/simulations/parameters/common/: __init__.py  collector_field.py  demand.py  time.py
src/resultes_pydantic_models/simulations/parameters/ptes/: __init__.py
src/resultes_pydantic_models/simulations/parameters/ptes/parameters/: thermal_energy_storage.py
src/resultes_pydantic_models/simulations/parameters/ttes/: __init__.py  test_deserialize.py
src/resultes_pydantic_models/simulations/parameters/ttes/parameters/: thermal_energy_storage.py
